# news-topic-keyphrase-generation-model-dev

./: .dvcignore  .gitignore  Dockerfile  README.md  README.md.old  accelerate_config.txt  cuda_test.ipynb  data.dvc  delete_unnecessaries.ipynb  inference.ipynb  inference_clm.ipynb  inference_seq2seq.ipynb  metrics_test.ipynb  model_test.ipynb  papermill.sh  preprocess.ipynb  pyproject.toml  train.ipynb  train.py  train.sh  train_causal_lm.ipynb  train_seq2seq_plm.ipynb  train_seq2seq_plm.py  train_seq2seq_plm_with_f1_at_10_local_test.ipynb
clm_tokenizer/: tokenizer.json  tokenizer_config.json
conf/: accelerate.yaml  train.yaml
notebooks.old/: postprocess.ipynb  train_seq2seq_plm.ipynb
notebooks.old/papermill/: papermill.sh  paust_pko_t5_base_v3_run_1.ipynb  paust_pko_t5_base_v3_run_2.ipynb  paust_pko_t5_base_v3_run_3.ipynb  paust_pko_t5_base_v3_run_4.ipynb  paust_pko_t5_base_v3_run_6_adafactor.ipynb  paust_pko_t5_base_v3_run_7_adafactor_lora.ipynb  paust_pko_t5_base_v3_run_8_adafactor_lora_100_epochs.ipynb  paust_pko_t5_base_v3_run_9_adafactor_lora_10_epochs_saving_adapters_test.ipynb
notebooks.old/papermill/.old/: paust_pko_t5_base_v1_test_train.ipynb
papermill/: paust_pko_t5_base_v3_run_1.ipynb  paust_pko_t5_base_v3_run_3.ipynb  paust_pko_t5_base_v3_run_5.ipynb  paust_pko_t5_base_v3_run_6_adafactor.ipynb  paust_pko_t5_base_v3_run_7_adafactor_lora.ipynb  paust_pko_t5_base_v3_run_8_adafactor_lora_100_epochs.ipynb
papermill/.old/: ainize_kobart_news_v2.ipynb  paust_pko_t5_base_v2.txt
results/: ainize_kobart_news_v2.txt  ainize_kobart_news_v2_run_2.ipynb  ainize_kobart_news_v2_run_2.txt  eleutherai_polyglot_ko_1.3b_v4_run_8.txt  paust_pko_t5_base_v2.ipynb  paust_pko_t5_base_v3_run_3.txt  test_training.txt
results/old/: eleutherai_polyglot_ko_1.3b_v4_run_13.txt
src/: metrics.py
