[tool.poetry]
name = "news-topic-keyphrase-generation-model-dev"
version = "0.1.0"
description = "생성 모델을 활용하여 신문기사의 토픽을 키프레이즈 생성 기법을 활용하여 추론합니다."
authors = ["Jeonghyeon Park <dotsnangles@gmail.com>"]
readme = "README.md"
packages = [{include = "news-topic-keyphrase-generation-model-dev"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
transformers = "^4.29.2"
accelerate = "^0.19.0"
deepspeed = "^0.9.2"
peft = "^0.3.0"
bitsandbytes = "^0.39.0"
datasets = "^2.12.0"
evaluate = "^0.4.0"
wandb = "^0.15.3"
papermill = "^2.4.0"
jupyterlab = "^4.0.0"
ipywidgets = "^8.0.6"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
konlpy = "^0.6.0"
rouge-score = "^0.1.2"
python-dotenv = "^1.0.0"
hydra-core = "^1.3.2"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs="True"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["data", "dataset", "outputs", "runs","wandb"]

[tool.black]
line-length = 88
